@@ -1052,52 +1052,33 @@ kinds of quotes.
 .SS COMMAND EXPANSION
 
 Whenever a fvwm command line is executed, fvwm performs parameter
-expansion.  A parameter is a '$' followed by a single letter or a
-word enclosed in brackets ($[...]).  If fvwm encounters an
-unquoted parameter on the command line it expands it to a string
+expansion.  A parameter is a '$' followed by a word enclosed in
+brackets ($[...]) or a single special character.  If fvwm encounters
+an unquoted parameter on the command line it expands it to a string
 indicated by the parameter name.  Unknown parameters are left
 untouched. Parameter expansion is performed before quoting.  To
-quote a '$' use "$$".  Note that module configuration lines
-(i.e. lines beginning with '*') are not fully expanded; for
-backward compatibility single alphabetic-letter parameters (like
-"$d" or "$n") are not expanded in these lines.
+quote a '$' use "$$".
 
-The general idea is to expand single letter parameters as soon as
-possible.  So a "$d" is expanded immediately when read by the
-parser, but "$3" is only expanded in the context of a complex
-function with at least four parameters.  Otherwise it is left
-untouched.  Similarly, "$c" is only expanded in the context of a
-window.
-
-Parameter expansion in the
-.BR +
-command is different than in normal commands.  If the command is
-adding to a function, single letter parameters are expanded
-normally which is often not what was intended.  To suppress
-expansion the '$' has to be doubled.  Parameters enclosed in
-brackets are protected from parameter expansion in these commands
-so the '$' must not be doubled.
+In the past some single letter variables were supported.  It is
+deprecated now, since they cause a number of problems.  You should
+use the longer substitutes instead.
 
 Example:
 
 .EX
 # Print the current desk number, horizontal
 # page and the window's class.
-Echo $d $[page.nx] $c
-# But a function that prints $d needs $$,
-# but not before $[page.nx] or $c:
-AddToFunc PrintDeskNumber
-+ I Echo $$d $[page.nx] $c
+Echo $[desk.n] $[page.nx] $[w.class]
 .EE
 
-Note: If this funtion is called outside a window context, it will
-print "$c" instead of the class name.  It is usually not enough to
-have the pointer over a window to have a context window.  To force
-using the window with the focus, the
+Note: If the command is called outside a window context, it will
+print "$[w.class]" instead of the class name.  It is usually not
+enough to have the pointer over a window to have a context window.
+To force using the window with the focus, the
 .B Current
 command can be used:
 .EX
-Current Echo $d $[page.nx] $c
+Current Echo $[desk.n] $[page.nx] $[w.class]
 .EE
 
 The parameters known by fvwm are:
@@ -1123,6 +1104,8 @@ $c
 .in +.3i
 The window's resource class name or "$c" if no window is
 associated with the command.
+
+(Deprecated, use $[w.class] instead.)
 .in -.3i
 .in -.5i
 
@@ -1130,6 +1113,8 @@ associated with the command.
 $d
 .in +.3i
 The current desk number.
+
+(Deprecated, use $[desk.n] instead.)
 .in -.3i
 .in -.5i
 
@@ -1138,6 +1123,8 @@ $n
 .in +.3i
 The window's name or "$n" if no window is associated with the
 command.
+
+(Deprecated, use $[w.name] instead.)
 .in -.3i
 .in -.5i
 
@@ -1146,6 +1133,8 @@ $r
 .in +.3i
 The window's resource name or "$r" if no window is associated with
 the command.
+
+(Deprecated, use $[w.resource] instead.)
 .in -.3i
 .in -.5i
 
@@ -1153,6 +1142,8 @@ the command.
 $v
 .in +.3i
 The first line printed by the -version command line option.
+
+(Deprecated, use $[version.line] instead.)
 .in -.3i
 .in -.5i
 
@@ -1162,6 +1153,8 @@ $w
 The window-id (expressed in hex, e.g. 0x10023c) of the window the
 command was called for or "$w" if no window is associated with the
 command.
+
+(Deprecated, use $[w.id] instead.)
 .in -.3i
 .in -.5i
 
@@ -1169,6 +1162,8 @@ command.
 $x
 .in +.3i
 The x coordinate of the current viewport.
+
+(Deprecated, use $[vp.x] instead.)
 .in -.3i
 .in -.5i
 
@@ -1176,6 +1171,8 @@ The x coordinate of the current viewport.
 $y
 .in +.3i
 The y coordinate of the current viewport.
+
+(Deprecated, use $[vp.y] instead.)
 .in -.3i
 .in -.5i
 
@@ -1200,12 +1197,41 @@ includes parameters that follow after "$9".
 .in -.5i
 
 .in +.5i
+$[version.num]
+.in +.3i
+The version number, like "2.6.0".
+.in -.3i
+.in -.5i
+ 
+.in +.5i
+$[version.info]
+.in +.3i
+The version info, like " (from cvs)", empty for the official releases.
+(Always empty in this branch.)
+.in -.3i
+.in -.5i
+ 
+.in +.5i
+$[version.line]
+.in +.3i
+The first line printed by the -version command line option.
+.in -.3i
+.in -.5i
+
+.in +.5i
 $[vp.x]
 $[vp.y]
 $[vp.width]
 $[vp.height]
 .in +.3i
 Either coordinate or the width or height of the current viewport.
+.in -.3i
+.in -.5i
+
+.in +.5i
+$[desk.n]
+.in +.3i
+The current desk number.
 .in -.3i
 .in -.5i
 
@@ -1228,6 +1254,15 @@ The current page numbers, by X and Y axes, starting from 0.
 .in -.5i
 
 .in +.5i
+$[w.id]
+.in +.3i
+The window-id (expressed in hex, e.g. 0x10023c) of the window the
+command was called for or "$[w.id]" if no window is associated with
+the command.
+.in -.3i
+.in -.5i
+
+.in +.5i
 $[w.x]
 $[w.y]
 $[w.width]
@@ -1236,6 +1271,18 @@ $[w.height]
 Either coordinate or the width or height of the current window if
 it is not iconified.  If no window is associated with the command
 or the window is iconified, the string is left as is.
+.in -.3i
+.in -.5i
+
+.in +.5i
+$[w.name]
+$[w.iconname]
+$[w.class]
+$[w.resource]
+.in +.3i
+The window's name or icon name or resource class or resource name
+respectivelly, or unexpended "$[w.<attribute>]" string if no window
+is associated with the command.
 .in -.3i
 .in -.5i
 
