@@ -1,3 +1,10 @@
+2003-03-17  Mikhael Goikhman  <migo@homemail.com>
+
+	* fvwm/functions.c:
+	* fvwm/fvwm2.1:
+	* NEWS:
+	backported single letter variable replacements, like $[w.id]
+
 2003-03-16  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/icons.c (Iconify):
